supported filtering on all_bookings
